# aoc2023

./: .gitignore  README.md  download_input.py  pyproject.toml
1/: day_1.py  test_1.py
2/: day_2.py  test_2.py
src/aoc2023/: __init__.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_2.py  day_20.py  day_21.py  day_22.py  day_3.py  day_4.py  day_5.py  day_6.py  day_7.py  day_8.py  day_9.py  direction.py  position.py
src/aoc2023/scripts/: aoc.py  download_input.py
tests/: test_1.py  test_10.py  test_11.py  test_12.py  test_13.py  test_14.py  test_15.py  test_16.py  test_17.py  test_18.py  test_2.py  test_20.py  test_21.py  test_22.py  test_3.py  test_4.py  test_5.py  test_6.py  test_7.py  test_8.py  test_9.py  test_position.py
tests/test_input/: test_input_13_2.txt
